# plm-oss

./: .env.example  .gitignore  Dockerfile.test-runner  LICENSE  README.md  docker-compose.backend.test.yml  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-13094923a6a4e0bf2f6c81cb8b7a13a5dd5e0177663bfc8c843893d4cc484321.json  query-199cd317b871bac81a3bb5ece3ccfaaad8e3144bd2cf21acd7d525cd3d32c874.json  query-2fb1603a94dcee6421c8806c5cd91504fd50474f21eddc881dbaf6db4facad91.json  query-4188e2affe53eb55975440c0bb79c2cc3db64b3340a12374fad4c6e973ce242a.json  query-49d65298b2954a365b70e3f76f7f2e6e44aa515411b5307a2deed588d4c9b694.json  query-518e2aa5d62f887acaf2c6c239593bdf7dddc3a1273e19f877ade90ec7e7b835.json  query-60ff056bad837a8b66752141a9ddbbe5498df44430b223252a0c0892467a8c30.json  query-67a73815d4a2814f0ee52c16861d24bb1687304fc3e1574c695a0be182779b4f.json  query-681ed4485b5cea36ab267596b89e34577a090acdbbc99a3d6dbfa2fcb1bb38ed.json  query-79de6ccb41985a6a0f0d6e69c0fc139429db9d18fbb157bf7b82a18080203454.json  query-87a60e1de9ed6fbfba95d3648dc03066f5a85855daabf50b36c1db3df1598887.json  query-c348907362006765f64c437a296dbe858e82f54ae0b7eb7d8adeb9c1515c8bd2.json  query-e07af55a76c87a9f4c79df8f45ecb54538114abdc030e7c85951e41c4a2c9448.json  query-ebdd0247c4252b17950c137a25e9e5d5c96668ca97e2f4533d5b80003a317305.json  query-f43c47b8cb05bc988f6a709953460c22ee7ee36fd6f59ccad258b73ca09a16b4.json
backend/migrations/: 20250426185825_create_parts.sql  20250501093617_create_users.sql  20250505014021_add_created_by_to_parts.sql
(+45 files in other folders)
